ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
int32_t ucx_wifi_StationSetSecurityEnterprise6(ucx_instance_t *inst, int32_t wlan_handle, uWifiTlsVersion_t tls_version, const char * ca_name, const char * client_cert_name, const char * client_key_name, const char * identity);
bool ucx_wifi_StationGetSecurityBegin(ucx_instance_t *inst, int32_t wlan_handle, uCxWifiStationGetSecurity_t * pWifiStationGetSecurityRsp);
int32_t ucx_wifi_StationSetSecurityPeap4(ucx_instance_t *inst, int32_t wlan_handle, uWifiTlsVersion_t tls_version, const char * peap_user, const char * peap_password);
int32_t ucx_wifi_StationSetSecurityPeap5(ucx_instance_t *inst, int32_t wlan_handle, uWifiTlsVersion_t tls_version, const char * peap_user, const char * peap_password, const char * ca_name);
int32_t ucx_wifi_StationSetSecurityWpa(ucx_instance_t *inst, int32_t wlan_handle, const char * passphrase, uWifiWpaThreshold_t wpa_threshold);
int32_t ucx_wifi_StationSetSecurityOpen(ucx_instance_t *inst, int32_t wlan_handle);
int32_t ucx_wifi_StationSetConnectionParams(ucx_instance_t *inst, int32_t wlan_handle, const char * ssid);
bool ucx_wifi_StationGetConnectionParamsBegin(ucx_instance_t *inst, int32_t wlan_handle, const char * * ppSsid);
int32_t ucx_wifi_StationSetIpConfigStatic4(ucx_instance_t *inst, int32_t wlan_handle, uSockIpAddress_t * ip_addr, uSockIpAddress_t * subnet_mask, uSockIpAddress_t * gateway);
int32_t ucx_wifi_StationSetIpConfigStatic5(ucx_instance_t *inst, int32_t wlan_handle, uSockIpAddress_t * ip_addr, uSockIpAddress_t * subnet_mask, uSockIpAddress_t * gateway, uSockIpAddress_t * prim_dns);
int32_t ucx_wifi_StationSetIpConfigStatic6(ucx_instance_t *inst, int32_t wlan_handle, uSockIpAddress_t * ip_addr, uSockIpAddress_t * subnet_mask, uSockIpAddress_t * gateway, uSockIpAddress_t * prim_dns, uSockIpAddress_t * sec_dns);
int32_t ucx_wifi_StationSetIpConfigDhcp(ucx_instance_t *inst, int32_t wlan_handle);
int32_t ucx_wifi_StationGetIpConfig(ucx_instance_t *inst, int32_t wlan_handle, uCxWifiStationGetIpConfig_t * pWifiStationGetIpConfigRsp);
int32_t ucx_wifi_StationConnect(ucx_instance_t *inst, int32_t wlan_handle);
int32_t ucx_wifi_StationDisconnect(ucx_instance_t *inst);
int32_t ucx_wifi_StationGetNetworkStatus(ucx_instance_t *inst, uWifiNetStatusId_t net_status_id, uSockIpAddress_t * pNetStatusVal);
void ucx_wifi_StationListNetworkStatusBegin(ucx_instance_t *inst);
bool ucx_wifi_StationListNetworkStatusGetNext(ucx_instance_t *inst, uCxWifiStationListNetworkStatus_t * pWifiStationListNetworkStatusRsp);
int32_t ucx_wifi_SetRegulatoryDomain(ucx_instance_t *inst, uWifiRegDomain_t reg_domain);
int32_t ucx_wifi_GetRegulatoryDomain(ucx_instance_t *inst, uWifiRegDomain_t * pRegDomain);
int32_t ucx_wifi_SetChannelList(ucx_instance_t *inst, const int16_t * channel_list, int32_t channel_list_len);
int32_t ucx_wifi_GetChannelList(ucx_instance_t *inst, uIntList_t * pChannelList);
int32_t ucx_wifi_GetActiveChannels(ucx_instance_t *inst, uIntList_t * pChannelList);
void ucx_wifi_StationScanDefaultBegin(ucx_instance_t *inst);
bool ucx_wifi_StationScanDefaultGetNext(ucx_instance_t *inst, uCxWifiStationScanDefault_t * pWifiStationScanDefaultRsp);
void ucx_wifi_StationScan1Begin(ucx_instance_t *inst, uWifiScanMode_t scan_mode);
bool ucx_wifi_StationScan1GetNext(ucx_instance_t *inst, uCxWifiStationScan_t * pWifiStationScanRsp);
void ucx_wifi_StationScan2Begin(ucx_instance_t *inst, uWifiScanMode_t scan_mode, const char * ssid);
bool ucx_wifi_StationScan2GetNext(ucx_instance_t *inst, uCxWifiStationScan_t * pWifiStationScanRsp);
bool ucx_wifi_StationStatusBegin(ucx_instance_t *inst, uWifiStatusId_t status_id, uCxWifiStationStatus_t * pWifiStationStatusRsp);
int32_t ucx_wifi_ApActivate(ucx_instance_t *inst);
int32_t ucx_wifi_ApDeactivate(ucx_instance_t *inst);
int32_t ucx_wifi_ApSetConnectionParams1(ucx_instance_t *inst, const char * ssid);
int32_t ucx_wifi_ApSetConnectionParams2(ucx_instance_t *inst, const char * ssid, uWifiChannel_t channel);
bool ucx_wifi_ApGetConnectionParamsBegin(ucx_instance_t *inst, uCxWifiApGetConnectionParams_t * pWifiApGetConnectionParamsRsp);
int32_t ucx_wifi_ApSetSecurityWpa1(ucx_instance_t *inst, const char * passphrase);
int32_t ucx_wifi_ApSetSecurityWpa2(ucx_instance_t *inst, const char * passphrase, uWifiWpaVersion_t wpa_version);
int32_t ucx_wifi_ApSetSecurityOpen(ucx_instance_t *inst);
int32_t ucx_wifi_ApGetSecurity(ucx_instance_t *inst, uCxWifiApGetSecurity_t * pWifiApGetSecurityRsp);
void ucx_wifi_ApListStationsBegin(ucx_instance_t *inst);
bool ucx_wifi_ApListStationsGetNext(ucx_instance_t *inst, uMacAddress_t * pMac);
int32_t ucx_wifi_ApGetNetworkStatus(ucx_instance_t *inst, uWifiNetStatusId_t net_status_id, uSockIpAddress_t * pNetStatusVal);
void ucx_wifi_ApListNetworkStatusBegin(ucx_instance_t *inst);
bool ucx_wifi_ApListNetworkStatusGetNext(ucx_instance_t *inst, uCxWifiApListNetworkStatus_t * pWifiApListNetworkStatusRsp);
int32_t ucx_wifi_SetWifiRoaming(ucx_instance_t *inst, uWifiRoaming_t roaming);
int32_t ucx_wifi_GetWifiRoaming(ucx_instance_t *inst, uWifiRoaming_t * pRoaming);
int32_t ucx_wifi_StationSetRoamingBGScanThreshold(ucx_instance_t *inst, int32_t roaming_scanning_threshold);
int32_t ucx_wifi_StationGetRoamingBGScanThreshold(ucx_instance_t *inst, int32_t * pRoamingScanningThreshold);
int32_t ucx_wifi_StationSetRoamingSwitchLimit(ucx_instance_t *inst, int32_t roaming_switch_limit);
int32_t ucx_wifi_StationGetRoamingSwitchLimit(ucx_instance_t *inst, int32_t * pRoamingSwitchLimit);
int32_t ucx_wifi_StationSetRoamingScanInterval(ucx_instance_t *inst, int32_t roaming_scan_interval);
int32_t ucx_wifi_StationGetRoamingScanInterval(ucx_instance_t *inst, int32_t * pRoamingScanInterval);
int32_t ucx_wifi_StationSetAggressiveRoaming(ucx_instance_t *inst, uWifiRoamingAggressive_t roaming_aggressive);
int32_t ucx_wifi_StationGetAggressiveRoaming(ucx_instance_t *inst, uWifiRoamingAggressive_t * pRoamingAggressive);
int32_t ucx_wifi_StationSetRoamingDelayMs(ucx_instance_t *inst, int32_t roaming_delay_time);
int32_t ucx_wifi_StationGetRoamingDelayMs(ucx_instance_t *inst, int32_t * pRoamingDelayTime);
int32_t ucx_wifi_StationSetRoamingAllChannels(ucx_instance_t *inst, uWifiRoamingChannels_t roaming_channels);
int32_t ucx_wifi_StationGetRoamingAllChannels(ucx_instance_t *inst, uWifiRoamingChannels_t * pRoamingChannels);
void ucx_wifi_RegisterLinkUp(ucx_instance_t *inst, uUEWLU_t callback);
void ucx_wifi_RegisterLinkDown(ucx_instance_t *inst, uUEWLD_t callback);