ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityEnterprise6(IntPtr instance, int wlan_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name, [MarshalAs(UnmanagedType.LPStr)] string client_cert_name, [MarshalAs(UnmanagedType.LPStr)] string client_key_name, [MarshalAs(UnmanagedType.LPStr)] string identity);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationGetSecurityBegin(IntPtr instance, int wlan_handle, out int pWifiStationGetSecurityRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityPeap4(IntPtr instance, int wlan_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string peap_user, [MarshalAs(UnmanagedType.LPStr)] string peap_password);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityPeap5(IntPtr instance, int wlan_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string peap_user, [MarshalAs(UnmanagedType.LPStr)] string peap_password, [MarshalAs(UnmanagedType.LPStr)] string ca_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityWpa(IntPtr instance, int wlan_handle, [MarshalAs(UnmanagedType.LPStr)] string passphrase, int wpa_threshold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityOpen(IntPtr instance, int wlan_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetConnectionParams(IntPtr instance, int wlan_handle, [MarshalAs(UnmanagedType.LPStr)] string ssid);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationGetConnectionParamsBegin(IntPtr instance, int wlan_handle, [MarshalAs(UnmanagedType.LPStr)] string ppSsid);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetIpConfigStatic4(IntPtr instance, int wlan_handle, out int ip_addr, out int subnet_mask, out int gateway);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetIpConfigStatic5(IntPtr instance, int wlan_handle, out int ip_addr, out int subnet_mask, out int gateway, out int prim_dns);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetIpConfigStatic6(IntPtr instance, int wlan_handle, out int ip_addr, out int subnet_mask, out int gateway, out int prim_dns, out int sec_dns);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetIpConfigDhcp(IntPtr instance, int wlan_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetIpConfig(IntPtr instance, int wlan_handle, out int pWifiStationGetIpConfigRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationConnect(IntPtr instance, int wlan_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationDisconnect(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetNetworkStatus(IntPtr instance, int net_status_id, out int pNetStatusVal);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_StationListNetworkStatusBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationListNetworkStatusGetNext(IntPtr instance, out int pWifiStationListNetworkStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_SetRegulatoryDomain(IntPtr instance, int reg_domain);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_GetRegulatoryDomain(IntPtr instance, out int pRegDomain);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_SetChannelList(IntPtr instance, IntPtr channel_list, int channel_list_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_GetChannelList(IntPtr instance, out int pChannelList);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_GetActiveChannels(IntPtr instance, out int pChannelList);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_StationScanDefaultBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationScanDefaultGetNext(IntPtr instance, out int pWifiStationScanDefaultRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_StationScan1Begin(IntPtr instance, int scan_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationScan1GetNext(IntPtr instance, out int pWifiStationScanRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_StationScan2Begin(IntPtr instance, int scan_mode, [MarshalAs(UnmanagedType.LPStr)] string ssid);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationScan2GetNext(IntPtr instance, out int pWifiStationScanRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_StationStatusBegin(IntPtr instance, int status_id, out int pWifiStationStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApActivate(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApDeactivate(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApSetConnectionParams1(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ssid);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApSetConnectionParams2(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ssid, int channel);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_ApGetConnectionParamsBegin(IntPtr instance, out int pWifiApGetConnectionParamsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApSetSecurityWpa1(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string passphrase);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApSetSecurityWpa2(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string passphrase, int wpa_version);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApSetSecurityOpen(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApGetSecurity(IntPtr instance, out int pWifiApGetSecurityRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_ApListStationsBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_ApListStationsGetNext(IntPtr instance, out int pMac);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_ApGetNetworkStatus(IntPtr instance, int net_status_id, out int pNetStatusVal);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_ApListNetworkStatusBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_ApListNetworkStatusGetNext(IntPtr instance, out int pWifiApListNetworkStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_SetWifiRoaming(IntPtr instance, int roaming);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_GetWifiRoaming(IntPtr instance, out int pRoaming);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetRoamingBGScanThreshold(IntPtr instance, int roaming_scanning_threshold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetRoamingBGScanThreshold(IntPtr instance, out int pRoamingScanningThreshold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetRoamingSwitchLimit(IntPtr instance, int roaming_switch_limit);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetRoamingSwitchLimit(IntPtr instance, out int pRoamingSwitchLimit);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetRoamingScanInterval(IntPtr instance, int roaming_scan_interval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetRoamingScanInterval(IntPtr instance, out int pRoamingScanInterval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetAggressiveRoaming(IntPtr instance, int roaming_aggressive);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetAggressiveRoaming(IntPtr instance, out int pRoamingAggressive);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetRoamingDelayMs(IntPtr instance, int roaming_delay_time);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetRoamingDelayMs(IntPtr instance, out int pRoamingDelayTime);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetRoamingAllChannels(IntPtr instance, int roaming_channels);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationGetRoamingAllChannels(IntPtr instance, out int pRoamingChannels);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterLinkUp(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterLinkDown(IntPtr instance, int callback);
